minor improvements to east

--- a/faker_israel/salaries/east.jinja.html
+++ b/faker_israel/salaries/east.jinja.html
@@ -32,12 +32,12 @@
         font-size: 54px
     }
     #tik_nikuyim {
-        top: 225px;
+        top: 231px;
         right: 364px;
         font-size: 54px
     }
     #organization {
-        top: 225px;
+        top: 230px;
         right: 782px;
         font-size: 54px
     }
@@ -55,19 +55,19 @@
     #full_name_number {
         font-size: 54px;
         top: 525px;
-        right: 266px;
+        right: 264px;
         font-weight: 900;
     }
     #address1 {
         font-size: 54px;
         top: 575px;
-        right: 266px;
+        right: 264px;
         font-weight: 900;
     }
     #city_zip {
         font-size: 54px;
         top: 620px;
-        right: 266px;
+        right: 264px;
         font-weight: 900;
     }
     #number_number_department {
@@ -97,7 +97,7 @@
     }
     #neto_salary {
         top: 432px;
-        right: 2202px;
+        right: 2199px;
         font-size: 37px;
         width: 240px;
         background-color: lightgray;
@@ -115,21 +115,35 @@
 {% endblock %}
 {% block body %}
 <div class="david" style="background-image: url('east.png'); width: 2480px; height: 3507px;">
-    <div id="place">אוניברסיטת אריאל בשומרון</div>
-    <div id="address">קריית המדע אריאל ת.ד. 3 40700</div>
-    <div id="tik_nikuyim">924296775</div>
-    <div id="organization">580367290</div>
-    <div id="department">15020419 עו"ס-תוא"ר-אחר</div>
-    <div id="month_year">מאי 2018</div>
-    <div id="full_name_number">גוטקין ילנה 151749</div>
-    <div id="address1">הנשיא 40 דירה 1</div>
-    <div id="city_zip">בית שמש 9903740</div>
-    <div id="number_number_department">2007 15020419 עו"ס-תוא"ר-אחר</div>
-    <div class="hidebg" id="sum_talshlumim">1,146.59</div>
-    <div class="hidebg" id="tax_mandatory_nikuy">398.59</div>
-    <div class="hidebg" id="kupot_gemel_agreed">66.00</div>
-    <div class="hidebg" id="neto_salary">682.00</div>
-    <div class="hidebg" id="neto">682.00</div>
+    <div id="place" style="background-color: white;width: 574px;height: 57px;">אוניברסיטת אריאל בשומרון</div>
+    <div id="address" style="background-color: white;width: 1009px;height: 57px;">קריית המדע אריאל ת.ד. 3 40700</div>
+    <div id="tik_nikuyim" style="background-color: white;width: 233px;height: 53px;">934578903</div>
+    <div id="organization" style="background-color: white;width: 574px;height: 57px;">580367290</div>
+    <div id="department" style="background-color: white;width: 1104px;height: 57px;">15678909 עו"ס-תוא"ר-אחר</div>
+    <div id="month_year" style="background-color: white;width: 574px;height: 57px;">מאי 2018</div>
+    <div id="full_name_number" style="background-color: white;width: 1214px;height: 51px;">שם פרטי שם משפחה מספר</div>
+    <div id="address1" style="background-color: white;width: 1134px;height: 57px;">רחוב 111 דירה 222</div>
+    <div id="city_zip" style="background-color: white;width: 1084px;height: 57px;">עיר מיקוד</div>
+    <div id="number_number_department" style="background-color: white;width: 1324px;height: 57px;">2007 15020419 עו"ס-תוא"ר-אחר</div>
+    <div class="hidebg" id="sum_talshlumim" style="background-color: white;width: 244px;height: 43px;">1,146.59</div>
+    <div class="hidebg" id="tax_mandatory_nikuy" style="background-color: #dddddd;width: 244px;height: 32px;">398.59</div>
+    <div class="hidebg" id="kupot_gemel_agreed" style="background-color: white;width: 234px;height: 42px;">66.00</div>
+    <div class="hidebg" id="neto_salary" style="background-color: #dddddd;width: 231px;height: 30px;">682.00</div>
+    <div class="hidebg" id="neto" style="background-color: white;width: 224px;height: 45px;">682.00</div>
+
+    <div class="hidebg" style="width: 935px;top: 672px;right: 263px;font-size: 54px;border-top: 1px solid black;">
+        במקרה של אי מסירה נא להחזיר לכתובת/ת"ד :
+        <br>
+        פתחיה - מוסדות לחינוך מיוחד
+        <br>
+        ת.ד 720 ירושלים
+    </div>
+
+    <div style="width: 935px;top: 672px;right: 263px;font-size: 54px;">
+        פירוט התשלומים
+    </div>
+
+
 <!--        <section class="end-table">-->
 <!--            <span>נטו לתשלום</span><span class="box-neto" id="neto">682.00</span>-->
 <!--        </section>-->
