--- a/faker_israel/salaries/west.jinja.html
+++ b/faker_israel/salaries/west.jinja.html
@@ -27,44 +27,71 @@
     <div style="top: 215px;width: 790px;height: 147px;font-family: timesnewroman;right: 267px;font-size: 38px;line-height: 47px;">
         <span id="company_name">545 - אקסלנט בע"מ</span>
         <br>
-        קרית עתידים, ת.ד. 58285
+        <span id="company_address">קרית עתידים, ת.ד. 58285
         <br>
-        תל אביב 6158102
+            תל אביב 6158102</span>
     </div>
+    <div id="tik_nikuyim" style="top: 214px; right: 1267px;width: 207px; height: 47px; font-size: 42px; font-family: timesnewroman">921352241</div>
+    <div id="company_number" style="top: 261px;right: 1267px;width: 207px;height: 47px;font-size: 42px;font-family: timesnewroman">513400853</div>
+    <div id="tik_bil" style="top: 308px;right: 1219px;width: 255px;height: 47px;font-size: 42px;font-family: timesnewroman">92135224100</div>
+
+    <div id="salary_month" style="top: 214px;right: 2063px;width: 207px;height: 47px;font-size: 42px;font-family: timesnewroman">09/2021</div>
+    <div id="printed_at" style="top: 261px; right: 2018px;width: 160px; height: 47px; font-size: 42px; font-family: timesnewroman">10/10/2021</div>
+    <div id="employee_name" class="hidebg" style="top: 639px;right: 190px;width: 850px;height: 47px;font-size: 40px;font-family: timesnewroman">גוטקין יעקב</div>
+    <div id="employee_address" class="hidebg" style="top: 690px;right: 170px;width: 870px;height: 97px;font-size: 39px;font-family: timesnewroman">הנשיא 46
+    <br>
+    בית שמש 9903754</div>
+
+    <div id="id_number" class="hidebg" style="top: 489px;right: 1449px;width: 228px;height: 47px;font-size: 42px;font-family: timesnewroman">30479031</div>
+    <div id="employee_number" class="hidebg" style="top: 489px;right: 2291px;width: 100px;height: 47px;font-size: 42px;font-family: timesnewroman">0011</div>
+    <div id="misra_sameh" style="top: 538px;right: 1411px;width: 228px;height: 47px;font-size: 42px;font-family: timesnewroman">1-יחידה</div>
+    <div id="misra_bil" style="top: 538px;right: 1907px;width: 228px;height: 47px;font-size: 40px;font-family: timesnewroman">עיקרית</div>
+    <div id="toshav" style="top: 538px;right: 2345px;width: 53px;height: 47px;font-size: 40px;font-family: timesnewroman">כן</div>
+    <div id="salary_base" style="top: 586px;right: 1464px;width: 228px;height: 47px;font-size: 39px;font-family: timesnewroman">חודשי</div>
+    <div id="part_job" style="top: 587px;right: 1969px;width: 140px;height: 47px;font-size: 44px;font-family: timesnewroman">0.8000</div>
+    <div id="vetek" class="hidebg" style="top: 583px;right: 2228px;width: 165px;height: 47px;font-size: 42px;font-family: timesnewroman">08.10.11</div>
+    <div id="department" style="top: 631px;right: 1398px;width: 400px;height: 47px;font-size: 40px;font-family: timesnewroman">002 עלות מכר</div>
+    <div id="job_start" class="hidebg" style="top: 635px;right: 2177px;width: 215px;height: 47px;font-size: 44px;font-family: timesnewroman">20/11/2012</div>
+    <div id="family_status" style="top: 680px;right: 1486px;width: 400px;height: 47px;font-size: 40px;font-family: timesnewroman">נ+0</div>
+    <div id="derug" style="top: 774px;right: 1364px;width: 100px;height: 47px;font-size: 43px;font-family: timesnewroman">000</div>
+    <div id="darga" style="top: 774px;right: 1836px;width: 100px;height: 47px;font-size: 43px;font-family: timesnewroman">000</div>
+    <div id="vetek_from" style="top: 774px;right: 2156px;width: 220px;height: 47px;font-size: 43px;font-family: timesnewroman">22/10/1978</div>
+    <div id="bank" style="top: 822px;right: 1359px;width: 100px;height: 47px;font-size: 42px;font-family: timesnewroman">12/303</div>
+    <div id="account" class="hidebg" style="top: 822px;right: 1841px;width: 220px;height: 47px;font-size: 42px;font-family: timesnewroman">000204398</div>
 
     <style>
         #tashlumim_table div {position: unset;direction: ltr;text-align:right;font-family: timesnewroman;font-size: 38px;}
         #tashlumim_table table {border-collapse: collapse;table-layout: fixed;width: 100%;}
-        #tashlumim_table td {border-left: 1px solid black;overflow:hidden;height: 47px;}
+        #tashlumim_table td {border-left: 5px solid lightgray;overflow:hidden;height: 47px;}
         #tashlumim_table tr td:last-child {border-left: 0;}
         /*#tashlumim_table tr:nth-child(n+5) td {height: 47px;}*/
         /*#tashlumim_table tr:nth-child(4) td {border: 0;color: #0066cc;font-weight: bold;}*/
         /*#tashlumim_table tr td:nth-child(6) div, #tashlumim_table tr td:nth-child(7) div {direction:rtl;}*/
-        #tashlumim_table tr td:nth-child(1) {width: 85px;}
-        #tashlumim_table tr td:nth-child(1) div {padding-right: 16px;}
+        #tashlumim_table tr td:nth-child(1) {width: 57px;}
+        #tashlumim_table tr td:nth-child(1) div {padding-right: 4px;}
         #tashlumim_table tr td:nth-child(2) {width: 435px;}
         #tashlumim_table tr td:nth-child(2) div {padding-right: 3px;}
-        #tashlumim_table tr td:nth-child(3) {width: 377px;}
-        #tashlumim_table tr td:nth-child(3) div {padding-right:8px;}
-        #tashlumim_table tr td:nth-child(4) {width: 128px;}
+        #tashlumim_table tr td:nth-child(3) {width: 150px;}
+        #tashlumim_table tr td:nth-child(3) div {padding-right:1px;}
+        #tashlumim_table tr td:nth-child(4) {width: 216px;}
         #tashlumim_table tr td:nth-child(4) div {padding-right:8px;}
-        #tashlumim_table tr td:nth-child(5) {width: 69px;}
+        #tashlumim_table tr td:nth-child(5) {width: 232px;}
         #tashlumim_table tr td:nth-child(5) div {padding-right:1px;text-align: center;}
-        #tashlumim_table tr td:nth-child(6) {width: 111px;}
+        #tashlumim_table tr td:nth-child(6) {width: 257px;}
         #tashlumim_table tr td:nth-child(6) div {padding-right:5px;}
         #tashlumim_table tr td:nth-child(7) {width: 100%;}
         #tashlumim_table tr td:nth-child(7) div {padding-right:5px;}
     </style>
-    <div id="tashlumim_table" style="width: 1665px;height: 835px;right: 132px;top: 1075px;">
+    <div id="tashlumim_table" style="width: 1635px;height: 835px;right: 160px;top: 1075px;">
         <table>
             <tbody><tr>
-                <td><div>001</div></td>
+                <td><div class="hidebg">001</div></td>
                 <td><div>משכורת</div></td>
                 <td><div>0.80</div></td>
                 <td><div>2730.00</div></td>
                 <td><div>-19234.56</div></td>
                 <td><div>237.0</div></td>
-                <td><div>12345.00</div></td>
+                <td><div class="hidebg">12345.00</div></td>
             </tr>
             <tr>
                 <td><div>001</div></td>
@@ -115,5 +142,314 @@
             {% endfor %}
         </tbody></table>
     </div>
+
+    <style>
+        /*#nikuyim_table div {position: unset;direction: ltr;text-align:right;font-family: timesnewroman;font-size: 38px;}*/
+        #nikuyim_table table {border-collapse: collapse;table-layout: fixed;width: 100%;}
+        #nikuyim_table td {border-left: 5px solid lightgray;overflow:hidden;height: 47px;}
+        #nikuyim_table tr td:last-child {border-left: 0;}
+        /*#tashlumim_table tr:nth-child(n+5) td {height: 47px;}*/
+        /*#tashlumim_table tr:nth-child(4) td {border: 0;color: #0066cc;font-weight: bold;}*/
+        /*#tashlumim_table tr td:nth-child(6) div, #tashlumim_table tr td:nth-child(7) div {direction:rtl;}*/
+        #nikuyim_table tr td:nth-child(1) {width: 58px;}
+        #nikuyim_table tr td:nth-child(1) div {padding-right: 3px; padding-top: -2px;}
+        #nikuyim_table tr td:nth-child(2) {width: 276px;}
+        #nikuyim_table tr td:nth-child(2) div {padding-right: 8px;}
+        #nikuyim_table tr td:nth-child(3) {width: 100%;}
+        #nikuyim_table tr td:nth-child(3) div {padding-right:15px;}
+    </style>
+
+    <div id="nikuyim_table" style="width: 572px; height: 835px; top: 1083px; right: 1822px; font-size: 38px; font-family: timesnewroman;">
+        <table>
+            <tbody>
+            <tr>
+                <td></td>
+                <td><div>מס הכנסה</div></td>
+                <td><div>4815.52</div></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><div>ב. לאומי</div></td>
+                <td><div>1325.00</div></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><div>מס בריאות</div></td>
+                <td><div>1124.00</div></td>
+            </tr>
+            {% for i in range(5) %}
+            <tr>
+                <td><div>001</div></td>
+                <td><div>כלל</div></td>
+                <td><div>945.32</div></td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
+    <style>
+        #nikuyim_optional_table table {border-collapse: collapse;table-layout: fixed;width: 100%;}
+        #nikuyim_optional_table td {border-left: 5px solid lightgray;overflow:hidden;height: 47px;}
+        #nikuyim_optional_table tr td:last-child {border-left: 0;}
+        #nikuyim_optional_table tr td:nth-child(1) {width: 58px;}
+        #nikuyim_optional_table tr td:nth-child(1) div {padding-right: 3px; padding-top: -2px;}
+        #nikuyim_optional_table tr td:nth-child(2) {width: 280px;}
+        #nikuyim_optional_table tr td:nth-child(2) div {padding-right: 8px;}
+        #nikuyim_optional_table tr td:nth-child(3) {width: 100%;}
+        #nikuyim_optional_table tr td:nth-child(3) div { direction: ltr; padding-right:15px;}
+    </style>
+
+    <div id="nikuyim_optional_table" style="width: 572px; height: 340px; top: 2408px; right: 1822px; font-size: 38px; font-family: timesnewroman;">
+        <table>
+            <tbody>
+            {% for i in range(5) %}
+            <tr>
+                <td>001</td>
+                <td><div>קו הבריאות</div></td>
+                <td><div>-4565.52</div></td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
+    <div id="nikuyim_total" style="top: 2802px; right: 2183px; direction: ltr; text-align: right">-123456</div>
+
+    <div id="salary_neto" class="hidebg" style="font-family: timesnewroman; width: 215px; top: 2162px; right: 2179px;">15249.00</div>
+
+    <style>
+        #aggregate_table table {border-collapse: collapse;table-layout: fixed;width: 100%;}
+        #aggregate_table td {border-left: 5px solid lightgray;overflow:hidden;height: 47px;}
+        #aggregate_table tr td:last-child {border-left: 0;}
+        #aggregate_table tr td:nth-child(1) {width: 204px;}
+        #aggregate_table tr td:nth-child(1) div {padding-right: 3px; padding-top: -2px;}
+        #aggregate_table tr td:nth-child(2) {width: 100%;}
+        #aggregate_table tr td:nth-child(2) div { direction: ltr; padding-right:9px; font-size: 30px;}
+    </style>
+
+    <div id="aggregate_table" style="width: 402px; height: 590px; top: 2187px; right: 970px; font-size: 29px; font-family: timesnewroman;">
+        <table>
+            <tbody>
+            <tr>
+                <td><div>שכר חייב מס</div></td>
+                <td><div>210233.90</div></td>
+            </tr>
+            <tr>
+                <td><div>שווי למס</div></td>
+                <td><div>3966.80</div></td>
+            </tr>
+            <tr>
+                <td><div>שכ. ב. לאומי</div></td>
+                <td><div>210233.90</div></td>
+            </tr>
+            <tr>
+                <td><div>מס הכנסה</div></td>
+                <td><div>38513.38</div></td>
+            </tr>
+            <tr>
+                <td><div>בט. לאומי</div></td>
+                <td><div>10958.00</div></td>
+            </tr>
+            <tr>
+                <td><div>מס בריאות</div></td>
+                <td><div>9428.00</div></td>
+            </tr>
+            {% for i in range(5) %}
+            <tr>
+                <td><div>קו הבריאות</div></td>
+                <td><div>-4565.52</div></td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
+    <style>
+        #vacation_table table {border-collapse: collapse;table-layout: fixed;width: 100%;}
+        #vacation_table td {border-left: 5px solid lightgray;overflow:hidden;height: 47px;}
+        #vacation_table tr td:last-child {border-left: 0;}
+        #vacation_table tr td:nth-child(1) {width: 191px;}
+        #vacation_table tr td:nth-child(1) div {padding-right: 3px; padding-top: -2px;}
+        #vacation_table tr td:nth-child(2) {width: 100%;}
+        #vacation_table tr td:nth-child(2) div { direction: ltr; padding-right:9px; font-size: 30px;}
+    </style>
+
+    <div id="vacation_table" style="width: 385px; height: 200px; top: 2187px; right: 1407px; font-size: 28px; font-family: timesnewroman;">
+        <table>
+            <tbody>
+            <tr>
+                <td><div>יתרה קודמת</div></td>
+                <td><div>24.15</div></td>
+            </tr>
+            <tr>
+                <td><div>צבירה ח.ז.</div></td>
+                <td><div>1.20</div></td>
+            </tr>
+            <tr>
+                <td><div>ניצול ח.ז.</div></td>
+                <td><div>4.00</div></td>
+            </tr>
+            <tr>
+                <td><div>יתרה חדשה</div></td>
+                <td><div>21.35</div></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <style>
+        #sick_table table {border-collapse: collapse;table-layout: fixed;width: 100%;}
+        #sick_table td {border-left: 5px solid lightgray;overflow:hidden;height: 47px;}
+        #sick_table tr td:last-child {border-left: 0;}
+        #sick_table tr td:nth-child(1) {width: 191px;}
+        #sick_table tr td:nth-child(1) div {padding-right: 3px; padding-top: -2px;}
+        #sick_table tr td:nth-child(2) {width: 100%;}
+        #sick_table tr td:nth-child(2) div { direction: ltr; padding-right:9px; font-size: 30px;}
+    </style>
+
+    <div id="sick_table" style="width: 385px; height: 180px; top: 2447px; right: 1407px; font-size: 28px; font-family: timesnewroman;">
+        <table>
+            <tbody>
+            <tr>
+                <td><div>יתרה קודמת</div></td>
+                <td><div>18.30</div></td>
+            </tr>
+            <tr>
+                <td><div>צבירה ח.ז.</div></td>
+                <td><div>1.20</div></td>
+            </tr>
+            <tr>
+                <td><div>ניצול ח.ז.</div></td>
+                <td><div>.00</div></td>
+            </tr>
+            <tr>
+                <td><div>יתרה חדשה</div></td>
+                <td><div>19.50</div></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <style>
+        #other_data_table1 table {border-collapse: collapse;table-layout: fixed;width: 100%;}
+        #other_data_table1 td {border-left: 5px solid lightgray;overflow:hidden;height: 47px;}
+        #other_data_table1 tr td:last-child {border-left: 0;}
+        #other_data_table1 tr td:nth-child(1) {width: 204px;}
+        #other_data_table1 tr td:nth-child(1) div {padding-right: 3px; padding-top: -2px;}
+        #other_data_table1 tr td:nth-child(2) {width: 100%;}
+        #other_data_table1 tr td:nth-child(2) div { direction: ltr; padding-right:9px; font-size: 30px;}
+    </style>
+
+    <div id="other_data_table1" style="width: 375px; height: 490px; top: 2186px; right: 154px; font-size: 28px; font-family: timesnewroman;">
+        <table>
+            <tbody>
+            <tr>
+                <td><div>ימי עבודה</div></td>
+                <td><div>7</div></td>
+            </tr>
+            <tr>
+                <td><div>שעות עבודה</div></td>
+                <td><div>99.0</div></td>
+            </tr>
+            <tr>
+                <td><div>שעות העדרות</div></td>
+                <td><div>0.00</div></td>
+            </tr>
+            <tr>
+                <td><div>שעות ליום</div></td>
+                <td><div>8.58</div></td>
+            </tr>
+            <tr>
+                <td><div>נק. רגילות</div></td>
+                <td><div>2.25</div></td>
+            </tr>
+            <tr>
+                <td><div>אחוז מס שולי</div></td>
+                <td><div>35%</div></td>
+            </tr>
+            <tr>
+                <td><div>קוד מהדורה</div></td>
+                <td><div>ל9.128</div></td>
+            </tr>
+            <tr>
+                <td><div>חישוב מצטבר</div></td>
+                <td><div>כן/1</div></td>
+            </tr>
+            <tr>
+                <td><div>אופן תשלום</div></td>
+                <td><div>ישירות</div></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <style>
+        #other_data_table2 table {border-collapse: collapse;table-layout: fixed;width: 100%;}
+        #other_data_table2 td {border-left: 5px solid lightgray;overflow:hidden;height: 47px;}
+        #other_data_table2 tr td:last-child {border-left: 0;}
+        #other_data_table2 tr td:nth-child(1) {width: 213px;}
+        #other_data_table2 tr td:nth-child(1) div {padding-right: 3px; padding-top: -2px;}
+        #other_data_table2 tr td:nth-child(2) {width: 100%;}
+        #other_data_table2 tr td:nth-child(2) div { direction: ltr; padding-right:9px; font-size: 30px;}
+    </style>
+
+    <div id="other_data_table2" style="width: 385px; height: 680px; top: 2186px; right: 546px; font-size: 28px; font-family: timesnewroman;">
+        <table>
+            <tbody>
+            <tr>
+                <td><div>י"ע בחברה</div></td>
+                <td><div>10</div></td>
+            </tr>
+            <tr>
+                <td><div>ש"ע בחברה</div></td>
+                <td><div>92.0</div></td>
+            </tr>
+            <tr>
+                <td><div>שכר חייב במס</div></td>
+                <td><div>24889.00</div></td>
+            </tr>
+            <tr>
+                <td><div>שכר ב. לאומי</div></td>
+                <td><div>24889.00</div></td>
+            </tr>
+            <tr>
+                <td><div>שכר מבוטח</div></td>
+                <td><div>19200.00</div></td>
+            </tr>
+            <tr>
+                <td><div>בסיס קרה"ש</div></td>
+                <td><div>15712.00</div></td>
+            </tr>
+            <tr>
+                <td><div>גמל מעסיק</div></td>
+                <td><div>2847.36</div></td>
+            </tr>
+            <tr>
+                <td><div>קרה"ש מעסיק</div></td>
+                <td><div>1178.40</div></td>
+            </tr>
+            <tr>
+                <td><div>לפיצ. לא חויב מס</div></td>
+                <td><div>1599.36</div></td>
+            </tr>
+            <tr>
+                <td><div>ב. לאומי מעסיק</div></td>
+                <td><div>1634.70</div></td>
+            </tr>
+            <tr>
+                <td><div>שכר מינ. חודש</div></td>
+                <td><div>5300.00</div></td>
+            </tr>
+            <tr>
+                <td><div>שכר מינ. שעה</div></td>
+                <td><div>29.12</div></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div id="tashlum" class="hidebg" style="font-family: timesnewroman; width: 215px; top: 3010px; right: 2178px;">15249.00</div>
+
 </div>
 {% endblock %}
