--- a/faker_israel/salaries/west.jinja.html
+++ b/faker_israel/salaries/west.jinja.html
@@ -37,13 +37,13 @@
 
     <div id="salary_month" style="top: 214px;right: 2063px;width: 207px;height: 47px;font-size: 42px;font-family: timesnewroman">09/2021</div>
     <div id="printed_at" style="top: 261px; right: 2018px;width: 160px; height: 47px; font-size: 42px; font-family: timesnewroman">10/10/2021</div>
-    <div id="employee_name" class="hidebg" style="top: 639px;right: 190px;width: 850px;height: 47px;font-size: 40px;font-family: timesnewroman">גוטקין יעקב</div>
-    <div id="employee_address" class="hidebg" style="top: 690px;right: 170px;width: 870px;height: 97px;font-size: 39px;font-family: timesnewroman">הנשיא 46
+    <div id="employee_name" class="hidebg" style="top: 639px;right: 190px;width: 850px;height: 47px;font-size: 40px;font-family: timesnewroman">פלוני אלמוני</div>
+    <div id="employee_address" class="hidebg" style="top: 690px;right: 170px;width: 870px;height: 97px;font-size: 39px;font-family: timesnewroman">ארלוזורוב 60
     <br>
-    בית שמש 9903754</div>
+    ירושלים 1234567</div>
 
-    <div id="id_number" class="hidebg" style="top: 489px;right: 1449px;width: 228px;height: 47px;font-size: 42px;font-family: timesnewroman">30479031</div>
-    <div id="employee_number" class="hidebg" style="top: 489px;right: 2291px;width: 100px;height: 47px;font-size: 42px;font-family: timesnewroman">0011</div>
+    <div id="id_number" class="hidebg" style="top: 489px;right: 1449px;width: 228px;height: 47px;font-size: 42px;font-family: timesnewroman">123456789</div>
+    <div id="employee_number" class="hidebg" style="top: 489px;right: 2291px;width: 100px;height: 47px;font-size: 42px;font-family: timesnewroman">1234</div>
     <div id="misra_sameh" style="top: 538px;right: 1411px;width: 228px;height: 47px;font-size: 42px;font-family: timesnewroman">1-יחידה</div>
     <div id="misra_bil" style="top: 538px;right: 1907px;width: 228px;height: 47px;font-size: 40px;font-family: timesnewroman">עיקרית</div>
     <div id="toshav" style="top: 538px;right: 2345px;width: 53px;height: 47px;font-size: 40px;font-family: timesnewroman">כן</div>
@@ -57,7 +57,7 @@
     <div id="darga" style="top: 774px;right: 1836px;width: 100px;height: 47px;font-size: 43px;font-family: timesnewroman">000</div>
     <div id="vetek_from" style="top: 774px;right: 2156px;width: 220px;height: 47px;font-size: 43px;font-family: timesnewroman">22/10/1978</div>
     <div id="bank" style="top: 822px;right: 1359px;width: 100px;height: 47px;font-size: 42px;font-family: timesnewroman">12/303</div>
-    <div id="account" class="hidebg" style="top: 822px;right: 1841px;width: 220px;height: 47px;font-size: 42px;font-family: timesnewroman">000204398</div>
+    <div id="account" class="hidebg" style="top: 822px;right: 1841px;width: 220px;height: 47px;font-size: 42px;font-family: timesnewroman">132654987</div>
 
     <style>
         #tashlumim_table div {position: unset;direction: ltr;text-align:right;font-family: timesnewroman;font-size: 38px;}
