--- a/faker_israel/salaries/west.jinja.html
+++ b/faker_israel/salaries/west.jinja.html
@@ -49,7 +49,7 @@
     <div id="toshav" style="top: 538px;right: 2345px;width: 53px;height: 47px;font-size: 40px;font-family: timesnewroman">כן</div>
     <div id="salary_base" style="top: 586px;right: 1464px;width: 228px;height: 47px;font-size: 39px;font-family: timesnewroman">חודשי</div>
     <div id="part_job" style="top: 587px;right: 1969px;width: 140px;height: 47px;font-size: 44px;font-family: timesnewroman">0.8000</div>
-    <div id="vetek" class="hidebg" style="top: 583px;right: 2228px;width: 165px;height: 47px;font-size: 42px;font-family: timesnewroman">08.10.11</div>
+    <div id="vetek" class="hidebg" style="top: 583px;right: 2228px;width: 165px;height: 47px;font-size: 42px;font-family: timesnewroman">01.01.01</div>
     <div id="department" style="top: 631px;right: 1398px;width: 400px;height: 47px;font-size: 40px;font-family: timesnewroman">002 עלות מכר</div>
     <div id="job_start" class="hidebg" style="top: 635px;right: 2177px;width: 215px;height: 47px;font-size: 44px;font-family: timesnewroman">20/11/2012</div>
     <div id="family_status" style="top: 680px;right: 1486px;width: 400px;height: 47px;font-size: 40px;font-family: timesnewroman">נ+0</div>
@@ -143,6 +143,9 @@
         </tbody></table>
     </div>
 
+    <div id="shovi_mas" style="top: 1934px; right: 1279px; width: 185px;" class="hidebg">737.00</div>
+    <div id="tashlum_total" style="top: 1934px; right: 1539px; width: 185px" class="hidebg">20000.00</div>
+
     <style>
         /*#nikuyim_table div {position: unset;direction: ltr;text-align:right;font-family: timesnewroman;font-size: 38px;}*/
         #nikuyim_table table {border-collapse: collapse;table-layout: fixed;width: 100%;}
@@ -187,6 +190,8 @@
             </tbody>
         </table>
     </div>
+
+    <div id="mandatory_nikuy" class="hidebg" style="top: 1934px; right: 2176px;">8000.00</div>
 
     <style>
         #nikuyim_optional_table table {border-collapse: collapse;table-layout: fixed;width: 100%;}
