--- a/faker_israel/salaries/sun.jinja.html
+++ b/faker_israel/salaries/sun.jinja.html
@@ -167,8 +167,8 @@
             {% endfor %}
         </tbody></table>
     </div>
-    <div id="sahah_tashlumim_shotfim" style="background:url('sun_total_white_bg.png');width:190px;height:39px;top: 2539px;right: 905px;"><div style="padding-right:11px;">5198.12</div></div>
-    <div id="sahah_nikuim_shotfim" style="background:url('sun_total_white_bg.png');width:190px;height:39px;top: 2539px;right: 1754px;"><div style="padding-right:11px;">639.54</div></div>
-    <div id="sahar_hodshi_neto" style="background:url('sun_total_offwhite_bg.png');width:190px;height:43px;top: 2577px;right: 1754px;"><div style="padding-right:11px;font-weight:bold;">4558.58</div></div>
+    <div id="sahah_tashlumim_shotfim" style="background:url('sun_total_white_bg.png');width:190px;height:39px;top: 2539px;right: 905px;"><div id="sahah_tashlumim_shotfim_value" style="padding-right:11px;">5198.12</div></div>
+    <div id="sahah_nikuim_shotfim" style="background:url('sun_total_white_bg.png');width:190px;height:39px;top: 2539px;right: 1754px;"><div id="sahah_nikuim_shotfim_value" style="padding-right:11px;">639.54</div></div>
+    <div id="sahar_hodshi_neto" style="background:url('sun_total_offwhite_bg.png');width:190px;height:43px;top: 2577px;right: 1754px;"><div id="sahar_hodshi_neto_value" style="padding-right:11px;font-weight:bold;">4558.58</div></div>
 </div>
 {% endblock %}
