complete sun (first page only)

--- a/faker_israel/salaries/sun.jinja.html
+++ b/faker_israel/salaries/sun.jinja.html
@@ -59,19 +59,7 @@
     </style>
     <div id="netunim_golmyim_table" style="width: 771px;height: 799px;right: 319px;top: 975px;">
         <table>
-            <tbody><tr>
-                <td><div>אוכלוסיה</div></td>
-                <td><div>קבע</div></td>
-                <td><div>170812</div></td>
-            </tr><tr>
-                <td><div>אחוז תמריץ</div></td>
-                <td><div>8</div></td>
-                <td><div>060113</div></td>
-            </tr><tr>
-                <td><div>דרגת שכר</div></td>
-                <td><div>8</div></td>
-                <td><div>060113</div></td>
-            </tr>
+            <tbody>
             {% for i in range(21) %}
             <tr>
                 <td><div>דרגת שכר</div></td>
@@ -79,7 +67,8 @@
                 <td><div>060113</div></td>
             </tr>
             {% endfor %}
-        </tbody></table>
+            </tbody>
+        </table>
     </div>
     <div style="background: url('sun_tashlumim_table_bg.png');width: 780px;height: 438px;top: 1824px;right: 310px;"></div>
     <style>
@@ -102,22 +91,10 @@
     </style>
     <div id="tashlumim_table" style="width: 771px;height: 799px;right: 319px;top: 1825px;">
         <table>
-            <tbody><tr>
-                <td><div>שכר משולב</div></td>
-                <td><div></div></td>
-                <td><div>1368.94</div></td>
-            </tr><tr>
-                <td><div>תוספת הסכם 2011</div></td>
-                <td><div></div></td>
-                <td><div>288.27</div></td>
-            </tr><tr>
-                <td><div>תוספת הסכם 2009</div></td>
-                <td><div></div></td>
-                <td><div>178.49</div></td>
-            </tr>
-            {% for i in range(18) %}
+            <tbody>
+            {% for i in range(12) %}
             <tr>
-                <td><div>תוספת הסכם 2009</div></td>
+                <td><div>1</div></td>
                 <td><div></div></td>
                 <td><div>178.49</div></td>
             </tr>
@@ -145,27 +122,16 @@
     </style>
     <div id="nikuyim_table" style="width: 771px;height: 799px;right: 1169px;top: 1825px;">
         <table>
-            <tbody><tr>
-                <td><div>בטוח לאומי</div></td>
-                <td><div>17.31</div></td>
-                <td><div>17.91</div></td>
-            </tr><tr>
-                <td><div>ביטוח בריאות ממלכתי</div></td>
-                <td><div>118.75</div></td>
-                <td><div>122.84</div></td>
-            </tr><tr>
-                <td><div>ניכוי לקרן פנסיה</div></td>
-                <td><div>352.06</div></td>
-                <td><div>364.20</div></td>
-            </tr>
-            {% for i in range(18) %}
+            <tbody>
+            {% for i in range(10) %}
             <tr>
                 <td><div>ניכוי לקרן פנסיה</div></td>
                 <td><div>352.06</div></td>
                 <td><div>364.20</div></td>
             </tr>
             {% endfor %}
-        </tbody></table>
+            </tbody>
+        </table>
     </div>
     <div id="sahah_tashlumim_shotfim" style="background:url('sun_total_white_bg.png');width:190px;height:39px;top: 2539px;right: 905px;"><div id="sahah_tashlumim_shotfim_value" style="padding-right:11px;">5198.12</div></div>
     <div id="sahah_nikuim_shotfim" style="background:url('sun_total_white_bg.png');width:190px;height:39px;top: 2539px;right: 1754px;"><div id="sahah_nikuim_shotfim_value" style="padding-right:11px;">639.54</div></div>
