partial implementation of west

--- a/faker_israel/salaries/west.jinja.html
+++ b/faker_israel/salaries/west.jinja.html
@@ -27,9 +27,9 @@
     <div style="top: 215px;width: 790px;height: 147px;font-family: timesnewroman;right: 262px;font-size: 38px;line-height: 47px;background:white;">
         <span id="company_name">545 - אקסלנט בע"מ</span>
         <br>
-        <span id="company_address">קרית עתידים, ת.ד. 58285
+        <span id="company_address">קרית עתידים, ת.ד. 58285</span>
         <br>
-            תל אביב 6158102</span>
+        <span id="company_address_city">    תל אביב 6158102</span>
     </div>
     <div class="hidebg" id="tik_nikuyim" style="top: 214px; right: 1267px;width: 207px; height: 47px; font-size: 42px; font-family: timesnewroman">921352241</div>
     <div class="hidebg" id="company_number" style="top: 261px;right: 1267px;width: 207px;height: 47px;font-size: 42px;font-family: timesnewroman">513400853</div>
